<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_icon2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"/>
    <ImageView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/followersfollowing"
        app:layout_constraintStart_toEndOf="@id/user"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user" />

    <TextView
        android:id="@+id/choose_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/choose_your_language"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_lang" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/russian"
        app:layout_constraintStart_toEndOf="@id/en"
        app:layout_constraintTop_toBottomOf="@id/choose_lang" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/german"
        app:layout_constraintStart_toEndOf="@id/ru"
        app:layout_constraintTop_toBottomOf="@id/choose_lang" />

    <TextView
        android:id="@+id/choose_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Choose theme:"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/en" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/light_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Light"
        app:layout_constraintStart_toEndOf="@id/dark_theme"
        app:layout_constraintTop_toBottomOf="@id/choose_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Dark"
        app:layout_constraintStart_toEndOf="@id/system_theme"
        app:layout_constraintTop_toBottomOf="@id/choose_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/system_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="System"
        app:layout_constraintTop_toBottomOf="@id/choose_theme"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>