<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/your_library"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/user_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_icon"
        app:layout_constraintEnd_toStartOf="@id/plus_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/plus_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recents_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="300dp"
        android:text="@string/recents"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recents_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/background_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recents_icon" />

    <ImageView
        android:id="@+id/plus_icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:layout_constraintStart_toStartOf="@id/add_artist"
        app:layout_constraintTop_toTopOf="@id/add_artist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_artist"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/add_artist"
        app:layout_constraintStart_toEndOf="@id/plus_icon2"
        app:layout_constraintTop_toTopOf="@id/add_artist" />

    <ImageView
        android:id="@+id/add_podcasts_and_shows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_artist" />
    <ImageView
        android:id="@+id/plus_icon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        app:layout_constraintStart_toStartOf="@id/add_podcasts_and_shows"
        app:layout_constraintTop_toTopOf="@id/add_podcasts_and_shows"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add podcasts and shows"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/plus_icon3"
        app:layout_constraintTop_toTopOf="@id/add_podcasts_and_shows"
        app:layout_constraintBottom_toBottomOf="@id/add_podcasts_and_shows"/>

</androidx.constraintlayout.widget.ConstraintLayout>